--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
         crossorigin="anonymous"></script>
     <!-- <script src="../bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <script src="../bootstrap-5.1.3-dist/js/bootstrap.js"></script> -->
+    <script src="script.js"></script>
 </body>
 
 </html>
