--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="row justify-content-center fs-5 text-center">
                 <div class="col-md-4">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, voluptates deleniti dolore
+                    <p>halo bujanggggg gggg  onsectetur adipisicing elit. Similique, voluptates deleniti dolore
                         ea amet quisquam dolores minima ipsum voluptatum laboriosam.</p>
                 </div>
                 <div class="col-md-4">
