--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             class="rounded-circle img-thumbnail">
         <!-- https://squoosh.app/  untuk eit foto -->
         <h1 class="display-4">Ahmad Fikri Zakaria</h1>
-        <p class="lead">Student | Web Developer</p>
+        <p class="lead">Informatics Student | Web Developer</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fff" fill-opacity="1"
                 d="M0,96L40,106.7C80,117,160,139,240,128C320,117,400,75,480,80C560,85,640,139,720,170.7C800,203,880,213,960,197.3C1040,181,1120,139,1200,138.7C1280,139,1360,181,1400,202.7L1440,224L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
