--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             padding-top: 6rem;
             background-color: #e2edff;
         }
+
         section {
             padding-top: 5rem;
         }
@@ -53,7 +54,7 @@
     <!-- akhir Navbar -->
 
 
-    <!-- JUmbotron -->
+    <!-- Jumbotron -->
     <section class="jumbotron text-center">
         <img src="img/fikri.JPG" alt="ahmad fikri" title="fikri ganteng" width="200"
             class="rounded-circle img-thumbnail">
@@ -78,7 +79,7 @@
             </div>
             <div class="row justify-content-center fs-5 text-center">
                 <div class="col-md-4">
-                    <p>halo bujanggggg gggg  onsectetur adipisicing elit. Similique, voluptates deleniti dolore
+                    <p>halo bujanggggg gggg onsectetur adipisicing elit. Similique, voluptates deleniti dolore
                         ea amet quisquam dolores minima ipsum voluptatum laboriosam.</p>
                 </div>
                 <div class="col-md-4">
@@ -170,32 +171,49 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <form>
+                    <!-- alert muncul setelah form berhasil terkirim-->
+                    <div class="alert my-alert alert-success alert-dismissible fade show d-none" role="alert">
+                        <strong>Terimakasih!</strong> Pesan Anda sudah kami terima.
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+
+                    <form method="POST" id="my-form"
+                        action="https://script.google.com/macros/s/AKfycbylmjEX_gGoh03OTFrj7XW5rjAwnoMmKuGvwjMlw6UR-rKRPoc03ExNST_YMpSsvA/exec">
                         <div class="mb-3">
                             <label for="name" class="form-label">Nama Lengkap</label>
-                            <input type="text" class="form-control" id="name" aria-describedby="name">
+                            <input type="text" class="form-control" id="name" aria-describedby="name" name="nama">
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="email">
+                            <input type="email" class="form-control" id="email" aria-describedby="email" name="email">
                         </div>
                         <div class="mb-3">
                             <label for="pesan" class="form-label">Pesan</label>
-                            <textarea class="form-control" id="pesan" rows="3"></textarea>
+                            <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary">Kirim</button>
+                        <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+                        <!-- button loading muncul saat form dikirimkan -->
+                        <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                            <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                            <span role="status">Loading...</span>
+                        </button>
                     </form>
                 </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,202.7C384,181,480,107,576,85.3C672,64,768,96,864,133.3C960,171,1056,213,1152,208C1248,203,1344,149,1392,122.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0d6efd" fill-opacity="1"
+                d="M0,160L48,176C96,192,192,224,288,202.7C384,181,480,107,576,85.3C672,64,768,96,864,133.3C960,171,1056,213,1152,208C1248,203,1344,149,1392,122.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
     </section>
     <!-- Akhir Contact -->
 
     <!-- footer -->
     <footer class="bg-primary text-white text-center pb-5">
         <p>
-            Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="http://www.instagram.com/shuts_ya/" target="_blank" rel="noopener noreferrer" class="text-white fw-bold">Ahmad Fikri Zakaria</a>
+            Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="http://www.instagram.com/shuts_ya/"
+                target="_blank" rel="noopener noreferrer" class="text-white fw-bold">Ahmad Fikri Zakaria</a>
         </p>
     </footer>
     <!-- Akhir footer -->
@@ -205,6 +223,39 @@
     <!-- <script src="../bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <script src="../bootstrap-5.1.3-dist/js/bootstrap.js"></script> -->
     <script src="script.js"></script>
+
+    <!-- HTML TO SPREADSHEET BY LEVI -->
+    <script>
+        window.addEventListener("load", function () {
+            const form = document.getElementById('my-form');
+            const btnKirim = document.querySelector('.btn-kirim');
+            const btnLoading = document.querySelector('.btn-loading');
+            const myAlert = document.querySelector('.my-alert');
+
+            form.addEventListener("submit", function (e) {
+                e.preventDefault();
+                // Tampilkan tombol loading, hilangkan tombol kirim
+                btnLoading.classList.toggle('d-none');
+                btnKirim.classList.toggle('d-none');
+                const data = new FormData(form);
+                const action = e.target.action;
+                fetch(action, {
+                    method: 'POST',
+                    body: data,
+                })
+                    .then(() => {
+                        // Tampilkan tombol kirim, hilangkan tombol loading
+                        btnLoading.classList.toggle('d-none');
+                        btnKirim.classList.toggle('d-none');
+                        // Tampilkan alert pesan sudah diterima
+                        myAlert.classList.toggle('d-none');
+                        // Reset form nya
+                        form.reset();
+                    })
+            });
+        });
+
+    </script>
 </body>
 
 </html>
